@@ -200,15 +200,27 @@ CaMuleExternalConnector::CaMuleExternalConnector()
 	  m_ECClient(NULL),
 	  m_InputLine(NULL),
 	  m_NeedsConfigSave(false),
-	  m_locale(NULL)
+	  m_locale(NULL),
+	  m_strFullVersion(NULL),
+	  m_strOSDescription(NULL)
 {
-	SetAppName(wxT("aMule"));
+	SetAppName(wxT("aMule"));	// Do not change!
+	m_appname =
+		// Find out Application Name
+#ifdef WEBSERVERDIR
+		"amuleweb"
+#else
+		"amulecmd"
+#endif
+		;
 }
 
 CaMuleExternalConnector::~CaMuleExternalConnector()
 {
 	delete m_configFile;
 	delete m_locale;
+	free(m_strFullVersion);
+	free(m_strOSDescription);
 }
 
 void CaMuleExternalConnector::OnInitCommandSet()
@@ -348,19 +360,10 @@ void CaMuleExternalConnector::ConnectAndRun(const wxString &ProgName, const wxSt
 		return;
 	}
 
-	wxString appName =
-		// Find out Application Name
-		#ifdef WEBSERVERDIR
-			wxT("amuleweb")
-		#else
-			wxT("amulecmd")
-		#endif
-	;
-
 	#ifdef SVNDATE
-		Show(CFormat(_("This is %s %s %s\n")) % appName % wxT(VERSION) % wxT(SVNDATE));
+		Show(CFormat(_("This is %s %s %s\n")) % wxString::FromAscii(m_appname) % wxT(VERSION) % wxT(SVNDATE));
 	#else
-		Show(CFormat(_("This is %s %s\n")) % appName % wxT(VERSION));
+		Show(CFormat(_("This is %s %s\n")) % wxString::FromAscii(m_appname) % wxT(VERSION));
 	#endif
 
 	// HostName, Port and Password
@@ -457,15 +460,7 @@ void CaMuleExternalConnector::OnInitCmdLine(wxCmdLineParser& parser)
 bool CaMuleExternalConnector::OnCmdLineParsed(wxCmdLineParser& parser)
 {
 	if (parser.Found(wxT("version"))) {
-		const char *appName =
-			// Find out Application Name
-			#ifdef WEBSERVERDIR
-				"amuleweb"
-			#else
-				"amulecmd"
-			#endif
-		;
-		printf("%s %s\n", appName, (const char *)unicode2char(GetMuleVersion()));
+		printf("%s %s\n", m_appname, (const char *)unicode2char(GetMuleVersion()));
 		return false;
 	}
 
@@ -570,6 +565,15 @@ void CaMuleExternalConnector::SaveConfigFile()
 
 bool CaMuleExternalConnector::OnInit()
 {
+	// catch fatal exceptions
+	wxHandleFatalExceptions(true);
+
+	m_strFullVersion = strdup((const char *)unicode2char(GetMuleVersion()));
+	m_strOSDescription = strdup((const char *)unicode2char(wxGetOsDescription()));
+
+	// Handle uncaught exceptions
+	InstallMuleExceptionHandler();
+
 	bool retval = wxApp::OnInit();
 	OnInitCommandSet();
 	InitCustomLanguages();
@@ -615,5 +619,44 @@ wxAppTraits* CaMuleExternalConnector::CreateTraits()
 	return new CaMuleExternalConnectorTraits;
 }
 
+#endif
+
+// Gracefully handle fatal exceptions and print backtrace if possible
+void CaMuleExternalConnector::OnFatalException()
+{
+	/* Print the backtrace */
+	fprintf(stderr, "\n--------------------------------------------------------------------------------\n");	
+	fprintf(stderr, "A fatal error has occurred and %s has crashed.\n", m_appname);
+	fprintf(stderr, "Please assist us in fixing this problem by posting the backtrace below in our\n");
+	fprintf(stderr, "'aMule Crashes' forum and include as much information as possible regarding the\n");
+	fprintf(stderr, "circumstances of this crash. The forum is located here:\n");
+	fprintf(stderr, "    http://forum.amule.org/index.php?board=67.0\n");
+	fprintf(stderr, "If possible, please try to generate a real backtrace of this crash:\n");
+	fprintf(stderr, "    http://www.amule.org/wiki/index.php/Backtraces\n\n");
+	fprintf(stderr, "----------------------------=| BACKTRACE FOLLOWS: |=----------------------------\n");
+	fprintf(stderr, "Current version is: %s %s\n", m_appname, m_strFullVersion);
+	fprintf(stderr, "Running on: %s\n\n", m_strOSDescription);
+	
+	print_backtrace(1); // 1 == skip this function.
+	
+	fprintf(stderr, "\n--------------------------------------------------------------------------------\n");	
+}
+
+#ifdef __WXDEBUG__
+void CaMuleExternalConnector::OnAssertFailure(const wxChar *file, int line, const wxChar *func, const wxChar *cond, const wxChar *msg)
+{
+#if !defined wxUSE_STACKWALKER || !wxUSE_STACKWALKER
+	wxString errmsg = CFormat( wxT("%s:%s:%d: Assertion '%s' failed. %s") ) % file % func % line % cond % ( msg ? msg : wxT("") );
+
+	fprintf(stderr, "Assertion failed: %s\n", (const char*)unicode2char(errmsg));
+
+	// Skip the function-calls directly related to the assert call.
+	fprintf(stderr, "\nBacktrace follows:\n");
+	print_backtrace(3);
+	fprintf(stderr, "\n");
+#else
+	wxApp::OnAssertFailure(file, line, func, cond, msg);
+#endif
+}
 #endif
 // File_checked_for_headers
