@@ -145,6 +145,12 @@ public:
 	void OnInitCmdLine(wxCmdLineParser& amuleweb_parser);
 	bool OnCmdLineParsed(wxCmdLineParser& parser);
 
+	// Exception and assert handling
+	void OnFatalException();
+#ifdef __WXDEBUG__
+	void OnAssertFailure(const wxChar *file, int line, const wxChar *func, const wxChar *cond, const wxChar *msg);
+#endif
+
 	CECFileConfig*	m_configFile;
 	wxString	m_configFileName;
 
@@ -159,6 +165,7 @@ protected:
 	bool		m_KeepQuiet;
 	bool		m_Verbose;
 	CCommandTree	m_commands;
+	char *		m_appname;
 
 #if !wxUSE_GUI && defined(__WXMAC__)
 	virtual wxAppTraits* CreateTraits();
@@ -172,6 +179,8 @@ private:
 	bool		m_NeedsConfigSave;
 	wxString	m_language;
 	wxLocale *	m_locale;
+	char *		m_strFullVersion;
+	char *		m_strOSDescription;
 };
 
 #endif // __EXTERNALCONNECTOR_H__
